--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
 /* testo hero */
 .hero_title{
     font-size: 8rem;
-    color: #fff;
+    color: #f3f3f3;
     
 }
 
@@ -54,7 +54,7 @@
     top: 20%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: #fff;
+    color: #f3f3f3;
 }
 /* Informazioni*/
 .fab{
